--- a/Hausarbeit_FDM_2021_LK.tex
+++ b/Hausarbeit_FDM_2021_LK.tex
@@ -54,9 +54,13 @@
 	\clearpage
 	
 	\chapter{Einleitung}
+	(Text zur Beschreibung des Beispielszenarios und des Datensatzes, muss noch eingefügt werden.)\par
+	Als erster Schritt, vor Beginn der Erstellung der eigentlichen Hausarbeit und der Bearbeitung des Datensatzes, erfolgte die Festlegung der Lizensierung. Die Wahl der Lizenz für die vorliegende Hausarbeit erfolgte mithilfe des \href{https://creativecommons.org/choose/}{Creative Commons License Chooser}. Anschließend wurde die System-Umgebung zur Dokumentation eingerichtet welche im Folgenden näher erläutert wird.
 				
 		\section{Beschreibung der System-Umgebung}
-		
+		Zu Beginn des Projektes wurde Wert auf die Einrichtung einer definierten System-Umgebung gelegt, in der die Bearbeitung des Datensatzes erfolgen kann.
+		Die Versionskontrolle des bearbeiteten Datensatzes selbst erfolgt gemäß der Aufgabenstellung in einer FAIRDOMHub Sandbox. Bei FAIRDOMHub handelt es sich um ein Repositorium und eine Co-Working-Plattform die für Forschungsprojekte im Bereich der Systembiologie entwickelt wurde~\cite{10.1093/nar/gkw1032}.\par  
+		Die Texdokumentation der Bearbeitungsschritte erfolgt in einem \LaTeX{}-Dokument. Hierzu wurde zunächst ein GitHub-Repositorium erstellt, mithilfe dessen eine automatisierte Versionskontrolle der Projektdokumentation erfolgen kann (\url{https://github.com/lknegendorf/Master-BIDS-FDM_Hausarbeit}). Die Gliederung des Projektdokumentation gemäß der Aufgabenstellung wurde als erste Version der Textdokumentation in das Repositorium geladen. Darüber hinaus wurde eine tabellarische Übersicht der Dateistruktur und der Versionierung des GitHub-Repositoriums in dessen Wiki erstellt (\url{https://github.com/lknegendorf/Master-BIDS-FDM_Hausarbeit/wiki/%C3%9Cbersicht-%C3%BCber-Dateistruktur-und-Versionierung}).  
 		
 	\chapter{Bearbeitung der Aufgabenstellung}
 		
@@ -69,6 +73,11 @@
 		\section*{4. Datenaufbereitung}
 	
 		\section*{5. Datenpublikation}
+	
+	\clearpage
+	\singlespacing
+	\bibliography{FDM_Hausarbeit-Literatur}
+	\clearpage
 				
 	\chapter{Anhang}
 	
