--- a/FDM_Hausarbeit-Literatur.bib
+++ b/FDM_Hausarbeit-Literatur.bib
@@ -13,4 +13,67 @@
   publisher = {Oxford University Press ({OUP})},
 }
 
+@Article{10.1038/sdata.2016.18,
+  author    = {Mark D. Wilkinson and Michel Dumontier and IJsbrand Jan Aalbersberg and Gabrielle Appleton and Myles Axton and Arie Baak and Niklas Blomberg and Jan-Willem Boiten and Luiz Bonino da Silva Santos and Philip E. Bourne and Jildau Bouwman and Anthony J. Brookes and Tim Clark and Merc{\`{e}} Crosas and Ingrid Dillo and Olivier Dumon and Scott Edmunds and Chris T. Evelo and Richard Finkers and Alejandra Gonzalez-Beltran and Alasdair J.G. Gray and Paul Groth and Carole Goble and Jeffrey S. Grethe and Jaap Heringa and Peter A.C 't Hoen and Rob Hooft and Tobias Kuhn and Ruben Kok and Joost Kok and Scott J. Lusher and Maryann E. Martone and Albert Mons and Abel L. Packer and Bengt Persson and Philippe Rocca-Serra and Marco Roos and Rene van Schaik and Susanna-Assunta Sansone and Erik Schultes and Thierry Sengstag and Ted Slater and George Strawn and Morris A. Swertz and Mark Thompson and Johan van der Lei and Erik van Mulligen and Jan Velterop and Andra Waagmeester and Peter Wittenburg and Katherine Wolstencroft and Jun Zhao and Barend Mons},
+  journal   = {Scientific Data},
+  title     = {The {FAIR} Guiding Principles for scientific data management and stewardship},
+  year      = {2016},
+  month     = {mar},
+  number    = {1},
+  volume    = {3},
+  doi       = {10.1038/sdata.2016.18},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
+@Article{10.1016/j.cels.2019.09.011,
+  author    = {Daniel J.B. Clarke and Lily Wang and Alex Jones and Megan L. Wojciechowicz and Denis Torre and Kathleen M. Jagodnik and Sherry L. Jenkins and Peter McQuilton and Zachary Flamholz and Moshe C. Silverstein and Brian M. Schilder and Kimberly Robasky and Claris Castillo and Ray Idaszak and Stanley C. Ahalt and Jason Williams and Stephan Schurer and Daniel J. Cooper and Ricardo de Miranda Azevedo and Juergen A. Klenk and Melissa A. Haendel and Jared Nedzel and Paul Avillach and Mary E. Shimoyama and Rayna M. Harris and Meredith Gamble and Rudy Poten and Amanda L. Charbonneau and Jennie Larkin and C. Titus Brown and Vivien R. Bonazzi and Michel J. Dumontier and Susanna-Assunta Sansone and Avi Ma'ayan},
+  journal   = {Cell Systems},
+  title     = {{FAIRshake}: Toolkit to Evaluate the {FAIRness} of Research Digital Resources},
+  year      = {2019},
+  month     = {nov},
+  number    = {5},
+  pages     = {417--421},
+  volume    = {9},
+  doi       = {10.1016/j.cels.2019.09.011},
+  publisher = {Elsevier {BV}},
+}
+
+@Article{10.1016/j.ibmed.2020.100007,
+  author    = {Jason Walonoski and Sybil Klaus and Eldesia Granger and Dylan Hall and Andrew Gregorowicz and George Neyarapally and Abigail Watson and Jeff Eastman},
+  journal   = {Intelligence-Based Medicine},
+  title     = {Synthea{\texttrademark} Novel coronavirus ({COVID}-19) model and synthetic data set},
+  year      = {2020},
+  month     = {nov},
+  pages     = {100007},
+  volume    = {1-2},
+  doi       = {10.1016/j.ibmed.2020.100007},
+  publisher = {Elsevier {BV}},
+}
+
+@Article{10.1093/jamia/ocx079,
+  author    = {Jason Walonoski and Mark Kramer and Joseph Nichols and Andre Quina and Chris Moesel and Dylan Hall and Carlton Duffett and Kudakwashe Dube and Thomas Gallagher and Scott McLachlan},
+  journal   = {Journal of the American Medical Informatics Association},
+  title     = {Synthea: An approach, method, and software mechanism for generating synthetic patients and the synthetic electronic health care record},
+  year      = {2017},
+  month     = {aug},
+  number    = {3},
+  pages     = {230--238},
+  volume    = {25},
+  doi       = {10.1093/jamia/ocx079},
+  publisher = {Oxford University Press ({OUP})},
+}
+
+@Article{10.1038/ng.1054,
+  author    = {Susanna-Assunta Sansone and Philippe Rocca-Serra and Dawn Field and Eamonn Maguire and Chris Taylor and Oliver Hofmann and Hong Fang and Steffen Neumann and Weida Tong and Linda Amaral-Zettler and Kimberly Begley and Tim Booth and Lydie Bougueleret and Gully Burns and Brad Chapman and Tim Clark and Lee-Ann Coleman and Jay Copeland and Sudeshna Das and Antoine de Daruvar and Paula de Matos and Ian Dix and Scott Edmunds and Chris T Evelo and Mark J Forster and Pascale Gaudet and Jack Gilbert and Carole Goble and Julian L Griffin and Daniel Jacob and Jos Kleinjans and Lee Harland and Kenneth Haug and Henning Hermjakob and Shannan J Ho Sui and Alain Laederach and Shaoguang Liang and Stephen Marshall and Annette McGrath and Emily Merrill and Dorothy Reilly and Magali Roux and Caroline E Shamu and Catherine A Shang and Christoph Steinbeck and Anne Trefethen and Bryn Williams-Jones and Katherine Wolstencroft and Ioannis Xenarios and Winston Hide},
+  journal   = {Nature Genetics},
+  title     = {Toward interoperable bioscience data},
+  year      = {2012},
+  month     = {jan},
+  number    = {2},
+  pages     = {121--126},
+  volume    = {44},
+  doi       = {10.1038/ng.1054},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
